<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_titulo"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="253dp"
        android:layout_height="57dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/et_nombre"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_titulo"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/tv_titulo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <Switch
        android:id="@+id/sw_prueba"
        android:layout_width="244dp"
        android:layout_height="60dp"
        android:text="@string/sw_prueba"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_titulo"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/tv_titulo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="187dp"
        android:layout_height="98dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_titulo"
        app:layout_constraintStart_toStartOf="@+id/tv_titulo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69">

        <RadioButton
            android:id="@+id/rb_opcion1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_opcion1" />

        <RadioButton
            android:id="@+id/rb_opcion2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_opcion2" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_seleccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/btn_seleccion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_titulo"
        app:layout_constraintStart_toStartOf="@+id/tv_titulo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915" />

</androidx.constraintlayout.widget.ConstraintLayout>